--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
+language: c
 script: 
   - curl -fsSL https://raw.githubusercontent.com/arduino/arduino-cli/master/install.sh | sh
   - arduino-cli compile -b esp8266 .
